--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,11 @@ html {
   margin: auto;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-
 }
 
 h1,
@@ -44,19 +43,29 @@ ol {
 .content {
   display: flex;
   justify-content: center;
-  width: 1140px;
-  height: 800px;
+  align-items: end;
+  height: 534px;
   gap: 30px;
 }
 
+.result {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
 .result__video-container {
-  min-width: 711px;
+  inline-size: 711px;
+  block-size: 386px;
+  margin-bottom: 16px;
 }
 
 .result__video {
-  width: 100%;
-  height: auto;
-  margin-bottom: 16px;
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -67,26 +76,75 @@ ol {
   width: 100%;
 }
 
-.search-form__submit-button {
-  display: flex;
-  padding: 7px 70px 5px;
-  height: 100%; /* Полная высота контейнера */
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__fieldset {
+  border: none;
+  cursor: pointer;
+  appearance: none;
+}
+
+.search-form__label {
+  
+}
+
+.search-form__textfield {
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  background-color: transparent;
+  font-family: Fira Sans Condensed;
   font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+  width: 225px;
+}
+
+.search-form__pseudo-checkbox {
+  width: 19px;
+  height: 19px;
+  border: 1px 0px 0px 0px;
+}
+input[type="checkbox"]:disabled {
+width: 19px;
+height: 19px;
+border: 1px 0px 0px 0px;
+} /* выключённый */
+
+input[type="checkbox"]:checked {} /* выбранный */
+
+input[type="checkbox"]:focus-visible {} /* в фокусе */
+
+.button {
   font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
   text-align: center;
-  background-color: #1b1919;
-  color: #FFF; 
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.7);
   border: 1px solid #FFF;
   cursor: pointer;
+}
+
+.search-form__submit-button {
+  padding: 7px 70px 5px;
 }
 
 .content__list {
   display: flex;
   flex-direction: column;
   justify-content:space-between;
-  max-height: 300px;
+  max-height: 298px;
   overflow: auto;
 }
 
@@ -97,18 +155,17 @@ ol {
 .content__video-card {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
+  max-width: 298px;
 }
 
 .content__details {
   display: flex;
   flex-direction: column;
-  width: 399px;
-  gap: 18px;
+  gap: 26px;
 }
 
 .title {
@@ -117,7 +174,11 @@ ol {
   font-weight: 700;
   line-height: 70.5px;
   text-align: left;
-  text-transform:uppercase
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
 }
 
 .content__card-link {
@@ -131,6 +192,7 @@ ol {
   font-weight: 700;
   line-height: 30px;
   text-align: left;
+  text-transform: uppercase;
 }
 
 .content__video-card-description {
@@ -139,7 +201,6 @@ ol {
   font-weight: 400;
   line-height: 16.2px;
   text-align: left;
-
 }
 
 .search-form__fieldset-title {
@@ -148,4 +209,14 @@ ol {
   font-weight: 400;
   line-height: 21.6px;
   text-align: left;
+}
+
+.more-button {
+  padding: 6px 134px;
+  white-space: nowrap;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
 }
