--- a/styles/style.css
+++ b/styles/style.css
@@ -50,14 +50,15 @@ ol {
 
 .result {
   display: flex;
+  gap:18px;
   flex-direction: column;
   justify-content: end;
 }
 
 .result__video-container {
+  position: relative;
   inline-size: 711px;
   block-size: 386px;
-  margin-bottom: 16px;
 }
 
 .result__video {
@@ -88,67 +89,77 @@ ol {
 
 .search-form__fieldset {
   border: none;
-  cursor: pointer;
-  appearance: none;
+  cursor: pointer; 
 }
 
 .search-form__label {
   display: flex;
   justify-content: center;
   gap: 5px;
+  cursor: pointer;
+  appearance: none;
 }
 
 .search-form__textfield {
-  border-width: 1px 0px 1px 0px;
-  border-style: solid;
-  border-color: #FFF;
+  border: none;
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
   background-color: transparent;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 21.6px;
+  color:  rgb(255 255 255 / 0.7);
   text-align: left;
-  width: 225px;
-  border: none;
+  line-height: 21.6px;
+  min-width: 225px;
+  width: 100%;
+  min-height: 27px;
+  box-sizing:border-box;
+  padding-bottom: 5px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #FFF;
+  outline-offset: 2px;
+}
+
+.button:has(:focus-visible) {
+  outline: 1px solid #FFF;
+  outline-offset: 2px;
 }
 
 .search-form__checkbox-list {
   display: flex;
   gap: 17px;
+  margin-bottom: 7px;
 }
 
 .search-form__pseudo-checkbox {
-  display: block;
+  display: inline-block;
   width: 19px;
   height: 19px;
   border: 1px solid #FFF;
-  
+  padding: 1px;
+  position: relative;
 }
 
-.search-form__pseudo-checkbox:before {
-  width: 19px;
-  height: 19px;
+.search-form__pseudo-checkbox::before {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
   background-color:#FFF;
+  opacity: 0;
+  position: relative;
 }
 
-
-.search-form__pseudo-checkbox:active {
-  width: 19px;
-  height: 19px;
-  background-color: #FFF;
-  border: 1px;
+.search-form__label
+.search-form__checkbox:checked
++ .search-form__pseudo-checkbox::before{
   opacity: 1;
 }
 
-
 .search-form__label-text:hover {
-  text-decoration: underline;
-  text-decoration-color: #FFF;
-  text-underline-offset: 2px;
-  text-decoration-thickness: 1px;
-}
-
-.search-form__submit-button:hover {
   text-decoration: underline;
   text-decoration-color: #FFF;
   text-underline-offset: 2px;
@@ -162,21 +173,42 @@ ol {
   line-height: 21.6px;
   text-align: center;
   background-color: transparent;
-  color: rgba(255, 255, 255, 0.7);
+  color: #FFF;
   border: 1px solid #FFF;
   cursor: pointer;
 }
 
 .search-form__submit-button {
-  padding: 7px 70px 5px;
+  padding: 1px 72px 1px;
+  min-height: 34px;
+  height:100%;
+  
+ margin-bottom: 5px;
+}
+
+.button:hover {
+  text-decoration: underline;
+  text-decoration-color: #FFF;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 1px;
+}
+
+.button:active {
+  background-color: #545050;
 }
 
 .content__list {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content:space-between;
   max-height: 298px;
   overflow: auto;
+}
+
+.preloader {
+  position: absolute;
+  z-index: 10;
 }
 
 .content__list-item:not(:last-child) {
@@ -187,10 +219,6 @@ ol {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-}
-
-.content__video-card-thumbnail {
-  max-width: 298px;
 }
 
 .content__details {
@@ -236,16 +264,19 @@ ol {
 
 .search-form__fieldset-title {
   font-family: 'Fira Sans Condensed', sans-serif;
+  color: #FFF;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
   text-align: left;
+  margin-bottom: 7.5px;
 }
 
 .more-button {
   padding: 6px 134px;
   white-space: nowrap;
   width: 100%;
+  margin-bottom: 5px;
 }
 
 .content__video-card-thumbnail {
