--- a/styles/style.css
+++ b/styles/style.css
@@ -206,10 +206,7 @@ ol {
   overflow: auto;
 }
 
-.preloader {
-  position: absolute;
-  z-index: 10;
-}
+
 
 .content__list-item:not(:last-child) {
   margin-bottom: 32px;
@@ -273,6 +270,7 @@ ol {
 }
 
 .more-button {
+  box-sizing: border-box;
   padding: 6px 134px;
   white-space: nowrap;
   width: 100%;
