--- a/styles/style.css
+++ b/styles/style.css
@@ -4,23 +4,6 @@
   box-sizing: border-box;
 }
 
-html {
-  block-size: 100%;
-}
-
-.page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
-}
-
 h1,
 h2,
 h3,
@@ -38,6 +21,23 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+html {
+  block-size: 100%;
+}
+
+.page {
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
 }
 
 .content {
@@ -77,6 +77,35 @@ ol {
   width: 100%;
 }
 
+.search-form__fieldset {
+  border: none;
+  cursor: pointer; 
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  color: #FFF;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+  margin-bottom: 7px;
+}
+
+.search-form__label {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  cursor: pointer;
+  appearance: none;
+  margin-bottom: 2px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #FFF;
+  outline-offset: 2px;
+}
+
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -87,17 +116,11 @@ ol {
   white-space: nowrap;
 }
 
-.search-form__fieldset {
-  border: none;
-  cursor: pointer; 
-}
-
-.search-form__label {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-  cursor: pointer;
-  appearance: none;
+.search-form__label-text:hover {
+  text-decoration: underline;
+  text-decoration-color: #FFF;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 1px;
 }
 
 .search-form__textfield {
@@ -105,33 +128,25 @@ ol {
   border-top: 1px solid #FFF;
   border-bottom: 1px solid #FFF;
   background-color: transparent;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  color:  rgb(255 255 255 / 0.7);
   text-align: left;
   line-height: 21.6px;
   min-width: 225px;
   width: 100%;
   min-height: 27px;
-  box-sizing:border-box;
-  padding-bottom: 5px;
+  box-sizing: border-box;
 }
 
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid #FFF;
-  outline-offset: 2px;
-}
-
-.button:has(:focus-visible) {
-  outline: 1px solid #FFF;
-  outline-offset: 2px;
+input[type=text]::placeholder {
+  font-family: 'Fira Sans Condensed', sans-serif;
+	font-size: 18px;
+  font-weight: 400;
+	color: rgb(255 255 255 / 0.7);
 }
 
 .search-form__checkbox-list {
   display: flex;
-  gap: 17px;
-  margin-bottom: 7px;
+  gap: 16px;
+  margin-bottom: 5px;
 }
 
 .search-form__pseudo-checkbox {
@@ -159,13 +174,6 @@ ol {
   opacity: 1;
 }
 
-.search-form__label-text:hover {
-  text-decoration: underline;
-  text-decoration-color: #FFF;
-  text-underline-offset: 2px;
-  text-decoration-thickness: 1px;
-}
-
 .button {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -176,14 +184,6 @@ ol {
   color: #FFF;
   border: 1px solid #FFF;
   cursor: pointer;
-}
-
-.search-form__submit-button {
-  padding: 1px 72px 1px;
-  min-height: 34px;
-  height:100%;
-  
- margin-bottom: 5px;
 }
 
 .button:hover {
@@ -197,25 +197,16 @@ ol {
   background-color: #545050;
 }
 
-.content__list {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content:space-between;
-  max-height: 298px;
-  overflow: auto;
+.button:has(:focus-visible) {
+  outline: 1px solid #FFF;
+  outline-offset: 3px;
 }
 
-
-
-.content__list-item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.content__video-card {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+.search-form__submit-button {
+  padding: 1px 72px 1px;
+  min-height: 34px;
+  height:100%;
+  margin-bottom: 2px;
 }
 
 .content__details {
@@ -237,16 +228,65 @@ ol {
   color: #545050;
 }
 
+.content__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  max-height: 298px;
+  overflow: auto;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
 .content__card-link {
   text-decoration: none;
   color: white;
+  display: block;
+  margin: 2px;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-decoration-color: #FFF;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 1px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 2px solid #FFF;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
 .content__video-card-title {
   font-family: 'Oswald', sans-serif;
   font-size: 30px;
   font-weight: 700;
-  line-height: 30px;
   text-align: left;
   text-transform: uppercase;
 }
@@ -259,25 +299,16 @@ ol {
   text-align: left;
 }
 
-.search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed', sans-serif;
-  color: #FFF;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.6px;
-  text-align: left;
-  margin-bottom: 7.5px;
-}
-
-.more-button {
-  box-sizing: border-box;
-  padding: 6px 134px;
-  white-space: nowrap;
-  width: 100%;
-  margin-bottom: 5px;
-}
-
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
 }
+
+.more-button {
+  box-sizing: border-box;
+  padding: 6px 146px;
+  white-space: nowrap;
+  width: 100%;
+  margin-bottom: 3px;
+}
+
