--- a/styles/style.css
+++ b/styles/style.css
@@ -269,7 +269,7 @@ html {
 }
 
 .content__card-link:focus-visible {
-  outline: 2px solid #fff;
+  outline: 1px solid #fff;
 }
 
 .content__card-link_current {
@@ -286,6 +286,7 @@ html {
   display: flex;
   flex-direction: column;
   gap: 6px;
+  overflow: hidden;
 }
 
 .content__video-card-title {
