--- a/styles/style.css
+++ b/styles/style.css
@@ -42,16 +42,17 @@ html {
 
 .content {
   display: flex;
-  justify-content: center;
   align-items: end;
+  justify-content: center;
   gap: 30px;
+  inline-size: 100%;
 }
 
 .result {
   display: flex;
   flex-direction: column;
   justify-content: end;
-  gap: 18px;
+  gap: 16px;
 }
 
 .result__video-container {
@@ -64,8 +65,8 @@ html {
   display: block;
   object-fit: cover;
   object-position: center;
-  inline-size: 100%;
-  block-size: 100%;
+  inline-size: 711px;
+  block-size: 386px;
 }
 
 .search-form {
@@ -140,14 +141,15 @@ html {
   border-bottom: 1px solid #fff;
   line-height: 21.6px;
   text-align: left;
+  margin-bottom: 2px;
   background-color: transparent;
   appearance: none;
 }
 
 .search-form__checkbox-list {
   display: flex;
-  gap: 16px;
-  margin-bottom: 5px;
+  gap: 15px;
+  margin-bottom: 7px;
 }
 
 .search-form__pseudo-checkbox {
@@ -211,13 +213,14 @@ html {
   height: 100%;
   min-height: 34px;
   width: 194px;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
 }
 
 .content__details {
   display: flex;
   flex-direction: column;
   gap: 26px;
+  width: 534px;
 }
 
 .title {
@@ -286,7 +289,6 @@ html {
   display: flex;
   flex-direction: column;
   gap: 6px;
-  overflow: hidden;
 }
 
 .content__video-card-title {
@@ -296,6 +298,10 @@ html {
   line-height: 30px;
   text-align: left;
   text-transform: uppercase;
+  white-space: nowrap;  
+  overflow: hidden;         
+  text-overflow: ellipsis; 
+  width: 200px;
 }
 
 .content__video-card-description {
@@ -304,6 +310,12 @@ html {
   font-size: 18px;
   line-height: 16.2px;
   text-align: left;
+  display: block;
+  white-space: nowrap; 
+  overflow: hidden;    
+  text-overflow: ellipsis;
+  width: 200px;
+  max-height: 65px;
 }
 
 .content__video-card-thumbnail {
