--- a/styles/style.css
+++ b/styles/style.css
@@ -28,37 +28,35 @@ html {
 }
 
 .page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  inline-size: 1200px;
+  block-size: 100%;
   margin: auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
+  color: #fff;
   background-color: #1b1919;
-  inline-size: 1200px;
-  block-size: 100%;
 }
 
 .content {
   display: flex;
   align-items: end;
-  justify-content: center;
   gap: 30px;
-  inline-size: 100%;
+  inline-size: 1140px;
 }
 
 .result {
   display: flex;
   flex-direction: column;
   justify-content: end;
-  gap: 16px;
+  gap: 19px;
 }
 
 .result__video-container {
   position: relative;
-  inline-size: 711px;
-  block-size: 386px;
 }
 
 .result__video {
@@ -129,19 +127,19 @@ html {
 
 .search-form__textfield {
   box-sizing: border-box;
+  width: 100%;
+  min-width: 225px;
+  min-height: 27px;
+  margin-bottom: 2px;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   color: rgb(255 255 255 / 0.7);
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  width: 100%;
-  min-width: 225px;
-  min-height: 27px;
-  border: none;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
   line-height: 21.6px;
   text-align: left;
-  margin-bottom: 2px;
   background-color: transparent;
   appearance: none;
 }
@@ -210,17 +208,19 @@ html {
 }
 
 .search-form__submit-button {
+  width: 194px;
   height: 100%;
   min-height: 34px;
-  width: 194px;
   margin-bottom: 4px;
 }
 
 .content__details {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 26px;
-  width: 534px;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .title {
@@ -291,31 +291,31 @@ html {
   gap: 6px;
 }
 
-.content__video-card-title {
+.content__video-card-title { 
+  width: 200px;  
+  overflow: hidden;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 30px;
   text-align: left;
-  text-transform: uppercase;
-  white-space: nowrap;  
-  overflow: hidden;         
-  text-overflow: ellipsis; 
-  width: 200px;
+  text-transform: uppercase;         
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
+  display: -webkit-box;
+  width: 200px;
+  max-height: 65px;
+  overflow: hidden;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
   text-align: left;
-  display: block;
-  white-space: nowrap; 
-  overflow: hidden;    
-  text-overflow: ellipsis;
-  width: 200px;
-  max-height: 65px;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .content__video-card-thumbnail {
@@ -328,6 +328,6 @@ html {
 .more-button {
   width: 100%;
   min-height: 34px;
-  margin-bottom: 3px;
+  margin-bottom: 5px;
   white-space: nowrap;
 }
