--- a/styles/style.css
+++ b/styles/style.css
@@ -202,7 +202,7 @@ html {
   outline: none;
 }
 
-button:focus-visible {
+.button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 3px;
 }
